# papers

./: .gitignore  README.md  project_setup.sh  pyproject.toml
chatpdf/: chat.py  cli.py  importer.py  llm.py  memory.py
coding-agent-reference-code/: README.md  project_setup.sh  pyproject.toml  tutorial.md
coding-agent-reference-code/src/: browser_use.py  find_arxiv_papers.py  main.py  tools.py
current-project-plans/: chat_with_papers_plan.md
sql-cli-playground-reference-code/src/TEMP_TABLES/: C.pkl  D.pkl  articles.pkl  assignments.pkl  customers.pkl  daily_sales.pkl  employees.pkl  employees2.pkl  experiment_users.pkl  imputation_table.pkl  json_data.pkl  locations.pkl  managers.pkl  managers2.pkl  measurements.pkl  ml_data.pkl  order_status.pkl  owners.pkl  predictions.pkl  product_sales.pkl  product_sales2.pkl  projects.pkl  purchases.pkl  returns.pkl  sales.pkl  sales_series.pkl  scores.pkl  sensor_readings.pkl  sensors2.pkl  survey.pkl  user_actions.pkl  user_sessions.pkl  users_with_PII.pkl  website_traffic.pkl
src/: arxiv_ocr.py
src/notebooks/: doctly_pdf.ipynb  gemini_pdf.ipynb  test.md
src/papers/: __init__.py
src/scripts/: arxiv_ocr.py  copy_markdown_files.sh  download_openreview_papers.py  find_arxiv_papers.py  scrape_proceedings.py  searches.md  use_arxiv_ocr.md
src/scripts/extracted_papers_markdown/: sample-scrutinize-and-scale-effective-inference-time-search-by-scaling-verification.md
src/scripts/papers_ocr_results/chain-of-draft-thinking-faster-by-writing-less/: chain-of-draft-thinking-faster-by-writing-less.bib  (+1 more)
(+5 files in other folders)
