[project]
name = "papers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy~=2.1.0",
    "pandas~=2.2.0",
    "polars~=1.2.0",
    "gunicorn~=22.0.0",
    "requests~=2.32",
    "fastapi~=0.111.0",
    "uvicorn~=0.30.1",
    "python-dotenv~=1.0.0",
    "pytest-cov~=5.0.0",
    "python-json-logger~=2.0.7",
    "google-generativeai~=0.8.0",
    "google-cloud-aiplatform~=1.4.0",
    "anthropic~=0.42.0",
    "db-dtypes~=1.2.0",
    "ratelimit~=2.2.0",
    # "ipykernel~=6.29",
    "instructor~=1.4.3",
    # "notebook~=7.2.0",
    "scikit-learn~=1.5.0",
    "seaborn~=0.13.0",
    "matplotlib~=3.9.0",
    "markdown~=3.7.0",
    "weasyprint~=63.1"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
